--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -9,4 +9,4 @@ BBFILE_COLLECTIONS += "ts"
 BBFILE_PATTERN_ts := "^${LAYERDIR}/"
 BBFILE_PRIORITY_ts = "6"
 
-LAYERSERIES_COMPAT_meta-ts = "dunfell"
+LAYERSERIES_COMPAT = "dunfell"
