More attempts at fixing bugs

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -9,4 +9,4 @@ BBFILE_COLLECTIONS += "ts"
 BBFILE_PATTERN_ts := "^${LAYERDIR}/"
 BBFILE_PRIORITY_ts = "6"
 
-LAYERSERIES_COMPAT = "dunfell"
+LAYERSERIES_COMPAT_ts = "dunfell"
