Fixed some bugs in machine file

--- a/conf/machine/ts7180.conf
+++ b/conf/machine/ts7180.conf
@@ -5,10 +5,10 @@
 #@MAINTAINER: Tyler Waddle <waddleht@ornl.gov>
 #
 
-MACHINEOVERRIDES =. "mx6:mx6ul:ts7180"
+MACHINEOVERRIDES =. "mx6:mx6ul:"
 
 include conf/machine/include/ts7180.inc
 
 SERIAL_CONSOLE = "115200 ttymxc0"
 
-KERNEL_IMAGETYPE = "uImage"
+KERNEL_IMAGETYPE = "zImage"
